--- a/styles.css
+++ b/styles.css
@@ -1627,3 +1627,21 @@ body.loading {
         height: 50px;
     }
 }
+
+/* Add these to your styles.css file */
+* {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+}
+
+img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+    pointer-events: none;
+}
